[metadata]
name = fints_uml
version = 0.1.1
author = Sebastian Krämer
author_email = sebkraemer@posteo.org
description = A FinTS log file UML visualizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sebkraemer/FinTsUml
project_urls =
    Bug Tracker = https://github.com/sebkraemer/FinTsUml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = fints_uml
python_requires = >=3.6

# honor MANIFEST.in file; Changelog however is still not included
include_package_data = True

install_requires =
    requests

[options.extras_require]
dev = pytest
